# pykakuro

./: .gitignore  .set_cache  README.md  pyproject.toml  run_kakuro_gen.sh
src/pykakuro/: generate.py  generate_dataset.py  kakuro.py  puzzles.py
src/pykakuro.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
