[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "pykakuro"
version = "0.1.0"
description = "Kakuro puzzle generator and solver"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "AGPL-3.0-only"}
authors = [
    {name = "Brandon Thomson"},
    {name = "Anshuman Sabath"},
]
dependencies = []

[project.urls]
Homepage = "https://github.com/data-hound/pykakuro"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]